fixed some spacing; made fixed width apply only to unordered lists and not numbered lists, added an exclamation to "hint" element.

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 footer{background-color: rgb(63, 63, 63);}
 
 #main_list{
-  gap: 20px;
+  gap: 22px;
   margin-left: 60px;
   font-size: 18px;
   text-align: left;
@@ -92,4 +92,4 @@ padding:20px;}
 margin-left: 0px;
 }
 
-li{width: 360px;}
+ul{width: 380px;}
